--- a/app.json
+++ b/app.json
@@ -2,10 +2,10 @@
 	"ret": 1,
 	"apiver": 9,
 	"appid": "com.ypdan.ypdan",
-	"name": "ypdan",
+	"name": "优品单",
 	"version": "1.0.0",
 	"version_id": 1,
-	"author": "sunlong",
+	"author": "孙龙",
 	"description": "监听QQ群消息并POST到指定接口",
 	"event": [
 		{
@@ -16,13 +16,6 @@
 			"id": 1003
 		},
 		{
-			"name": "群消息",
-			"function": "EVENT_ON_GROUP_MSG",
-			"type": 2,
-			"priority": 20000,
-			"id": 2
-		},
-		{
 			"name": "插件停用",
 			"function": "EVENT_ON_DISABLE",
 			"type": 1004,
@@ -30,18 +23,11 @@
 			"id": 1004
 		},
 		{
-			"name": "酷Q启动",
-			"function": "EVENT_ON_START",
-			"type": 1001,
+			"name": "群消息",
+			"function": "EVENT_ON_GROUP_MSG",
+			"type": 2,
 			"priority": 20000,
-			"id": 1001
-		},
-		{
-			"name": "酷Q退出",
-			"function": "EVENT_ON_EXIT",
-			"type": 1002,
-			"priority": 20000,
-			"id": 1002
+			"id": 2
 		}
 	],
 	"auth": null,
